# IRC-server

./: .gitignore  .gitmodules  CMakeLists.txt  COMMANDS.md  CONFIG_DCC.md  Color.hpp  IRCException.cpp  IRCException.hpp  MOTD.txt  Makefile  README.md  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  SocketException.cpp  SocketException.hpp  TODO.md  User.hpp  defs.h  main.cpp  netcat.py  server_utils.cpp  socket_utils.cpp  test.txt
bot/: .gitignore  Bot.cpp  Bot.hpp  CMakeLists.txt  Makefile  Message.cpp  Message.hpp  User.cpp  User.hpp  main.cpp  test.cpp
bot/inc/: IRCParserBot.hpp
bot/src/: IRCParserBot.cpp
bot/txt_files/: ban.txt  kick.txt
inc/: Channel.hpp  Color.hpp  Converter.hpp  Database.hpp  Exception.hpp  IRCException.hpp  IRCParser.hpp  IRCParserException.hpp  IRCcodes.h  IRCrpl.hpp  ITarget.hpp  InviteNode.hpp  Mutex.hpp  Server.hpp  ServerException.hpp  Socket.hpp  SocketException.hpp  Thread.hpp  User.hpp  global.h  lexical_cast.hpp  parser_utils.hpp
src/: Channel.cpp  Color.cpp  Database.cpp  Exception.cpp  IRCException.cpp  IRCParser.cpp  IRCParser_compose.cpp  IRCParser_dcc_compose.cpp  IRCParser_exec.cpp  IRCParser_parse.cpp  IRCcodes.cpp  User.cpp  main.cpp  parser_utils.cpp  server_utils.cpp  socket_utils.cpp
test/: netcat.py  send.py  test.cpp  test_help.txt  test_motd.txt  ut.py
